--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "Fathur",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.18.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.13.3",
+    "nodemon": "^3.1.4",
     "uuid": "^10.0.0",
     "winston": "^3.13.1"
   },
