--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Make employee management using NodeJS (Express, Prisma ORM)",
   "main": "src/main.js",
+  "type": "module",
   "scripts": {
     "test": "jest"
   },
@@ -14,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.13.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "uuid": "^10.0.0",
     "winston": "^3.13.1"
