--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@prisma/client": "^5.18.0",
     "bcrypt": "^5.1.1",
+    "csv-parser": "^3.0.0",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.13.3",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
+    "pdfkit": "^0.15.0",
     "uuid": "^10.0.0",
     "winston": "^3.13.1"
   },
